implement account lock filter